# gc-standalone-template-mha

./: .gitmodules  CMakeLists.txt  README.md  gc-standalone-template.patch
src/: fp32_matmul_softmax_fusion_100111.cpp  fp32_matmul_softmax_fusion_100111.hpp  fp32_matmul_softmax_fusion_100111_data.cpp  fp32_mha_pattern_alternative3_100156.cpp  fp32_mha_pattern_alternative3_100156.hpp  fp32_mha_pattern_alternative3_100156_data.cpp  fp32_mha_pattern_alternative3_100183.cpp  fp32_mha_pattern_alternative3_100183.hpp  fp32_mha_pattern_alternative3_100183_data.cpp  main.cpp  mlp.cpp  mlp.hpp  mlp_data.cpp
